Member row expansion panel no longer cut off

--- a/src/app/membership-row/membership-row.component.css
+++ b/src/app/membership-row/membership-row.component.css
@@ -1,5 +1,6 @@
 mat-expansion-panel {
   margin: 1em auto;
+  max-width: 990px;
 }
 
 mat-extension-panel-header {
